--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,6 +11,91 @@
 </head>
 
 <body>
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
+        .col-ex-btn {
+            height: 1.5rem;
+            padding-left: 0.5rem;
+            padding-right: 0.5rem;
+            min-height: 1.5rem;
+            font-size: .75rem;
+
+            border: 1px solid white;
+            text-transform: uppercase;
+            display: inline-flex;
+            flex-shrink: 0;
+            cursor: pointer;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+            transition-duration: .2s;
+            transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+            border-radius: .5rem;
+            line-height: 1em;
+            font-weight: 600;
+            text-decoration-line: none;
+            animation: button-pop .25s ease-out;
+            background-color: #222222;
+            color: #dddddd;
+        }
+
+        .col-ex-btn:hover {
+            background-color: #000000;
+            color: #ffffff;
+        }
+
+
+        .col-ex-avatar {
+            align-items: center;
+            display: inline-flex;
+            justify-content: center;
+
+            background-color: #d1d5db;
+            color: #fff;
+
+            border-radius: 50%;
+            height: 3rem;
+            width: 3rem;
+            font-size: 1.5rem;
+            font-weight: 600;
+            line-height: 1;
+            overflow: hidden;
+            text-align: center;
+            text-transform: uppercase;
+        }
+
+
+        .translate-y-0 {
+            transform: translateY(0);
+        }
+
+        .translate-y-full {
+            transform: translateY(100%);
+        }
+
+        .duration-300 {
+            animation-duration: 300ms;
+        }
+
+        .ease-in-out {
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .col-ex-container {
+            padding: 1rem;
+            background-color: #10151f;
+            color: #dddddd;
+            min-width: 300px;
+            border-radius: 0.25rem;
+            transition-duration: 150ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    </style>
     <script src="./popup.js"></script>
 </body>
 
