[TASK] better design

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -17,14 +17,13 @@
         }
 
         .col-ex-btn {
-            height: 1.5rem;
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
-            min-height: 1.5rem;
-            font-size: .75rem;
+            height: 2em;
+            padding: 0.25rem 0.75rem;
+            min-height: 2em;
+            font-size: 0.85rem;
+            border: 1px solid transparent;
+            margin-bottom: 5px;
 
-            border: 1px solid white;
-            text-transform: uppercase;
             display: inline-flex;
             flex-shrink: 0;
             cursor: pointer;
@@ -49,6 +48,9 @@
             color: #ffffff;
         }
 
+        .col-ex-btn > svg {
+            margin-right: 0.25rem;
+        }
 
         .col-ex-avatar {
             align-items: center;
